# base-wsl-c-cpp

./: CMakeLists.txt  README.md  main.c  main.cpp  main.out  main.py  makefile  setup.py
include/: HelloWorld.h
src/: HelloWorld.cpp  main.cpp
